--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,7 @@ body {
 
 .query-option input, .query-option > label{
     cursor: pointer;
+    accent-color: hsl(169, 82%, 27%);
     margin: 0;
 }
 
@@ -144,7 +145,7 @@ body {
 .agreement {
     display: flex;
     margin: 20px 0 0 0;
-    align-items: start;
+    align-items: center;
 }
 
 .agreement input {
@@ -169,6 +170,36 @@ body {
     font-size: 14px;
     align-self: start;
     font-family: var(--font);
+}
+
+
+.success-alert{
+    z-index: 1000;
+    position: fixed;
+    top: 20px;
+    background-color: hsl(187, 24%, 22%);
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 0 10px;
+    font-family: var(--font);
+    display: none;
+    cursor: pointer;
+    box-shadow: 0px 5px 5px #333;
+}
+
+.heading{
+    padding: 0;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+}
+.heading img{
+    margin-right: 10px;
+}
+
+.success-alert span{
+    font-size: 14px;
 }
 
 .attribution {
