--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ body {
 }
 
 .query-option input:focus {
-    outline: 1px solid hsl(169, 82%, 27%);
+    /* outline: 1px solid hsl(169, 82%, 27%); */
   }
 
 .selected-query{
